@@ -12,7 +12,7 @@ void
 testTortureExecute (void)
 {
 // long long seems somewhat broken on MacOSX
-#if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   long long   x;
   int         n;
 
