@@ -13,7 +13,7 @@ void
 testTortureExecute (void)
 {
 // TODO: Enable when more ports support long long!
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   unsigned long long a;
   if (! (a = 0xfedcba9876543210ULL))
     ASSERT (0);
